Replaced Arrays.asList with List.of, some explcit types with var, a few classes with record.