@@ -3,14 +3,13 @@ package com.att.tlv.training.java.streams;
 import com.att.tlv.training.java.data.Player;
 import com.att.tlv.training.java.data.Players;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class FilterMapReduce {
     
     public void sumOfDoubles() {
         // Find the sum of double the values in the list
-        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        var numbers = List.of(1, 2, 3, 4, 5, 6);
         
         // Let's do it the imperative way:
         int result = 0;
@@ -44,39 +43,39 @@ public class FilterMapReduce {
         // If no such player exists, return -1
         final int DEFAULT = -1;
         final double MIN_SALARY = 80_000d;
-        
-        
+
+
         int oldestAge = DEFAULT;
         for (Player e : Players.getAll()) {
-            if (e.getSalary() > MIN_SALARY) {
-                oldestAge = Math.max(oldestAge, e.getAge());
+            if (e.salary() > MIN_SALARY) {
+                oldestAge = Math.max(oldestAge, e.age());
             }
         }
-        
-        
+
+
 //        oldestAge = Players.getAll()
 //                .stream()
-//                .filter(e -> e.getSalary() > MIN_SALARY)
-//                .map(e -> e.getAge())
+//                .filter(e -> e.salary() > MIN_SALARY)
+//                .map(e -> e.age())
 //                .reduce(DEFAULT, Math::max);
-        
+
 //        long start = System.nanoTime();
-        
-       // Better yet:
-       
+
+        // Better yet:
+
 //        oldestAge = Players.getAll()
 //                .stream()
-//                .filter(e -> e.getSalary() > MIN_SALARY)
-//                .mapToInt(Player::getAge)
+//                .filter(e -> e.salary() > MIN_SALARY)
+//                .mapToInt(Player::age)
 //                .max()
 //                .orElse(DEFAULT);
 
         // But how performant are we? Are we executing more operations?
         // And how can we debug???
-        
+
 //      debugging:
 //        .peek(System.out::println)        
-        
+
 //        long total = System.nanoTime() - start;     
 //        System.out.println("Time: " + NANOSECONDS.toMillis(total));
         System.out.println(oldestAge);
