@@ -1,79 +1,77 @@
 package com.att.tlv.training.java.exercises.lambdas;
 
 import com.att.tlv.training.java.exercises.data.Person;
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class MethodReferencesTest {
 
     @Test
     void testIsEmpty() {
-        ImmutableList<String> strings = ImmutableList.of("Hello", "", "   ", "");
+        var strings = List.of("Hello", "", "   ", "");
 
-        List<String> filteredStrings = strings.stream()
+        var filteredStrings = strings.stream()
                 .filter(MethodReferences.buildIsEmpty())
-                .collect(toList());
+                .toList();
 
         assertThat(filteredStrings).containsExactly("", "");
     }
 
     @Test
     void testIsEmptyWithEmptyResult() {
-        ImmutableList<String> strings = ImmutableList.of("Hello", "World");
+        var strings = List.of("Hello", "World");
 
-        List<String> filteredStrings = strings.stream()
+        var filteredStrings = strings.stream()
                 .filter(MethodReferences.buildIsEmpty())
-                .collect(toList());
+                .toList();
 
         assertThat(filteredStrings).isEmpty();
     }
 
     @Test
     void testIsAMinor() {
-        Person alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY + 3);
-        Person bob = new Person(2, "Bob", MethodReferences.AGE_OF_MAJORITY);
-        Person jim = new Person(3, "Jim", MethodReferences.AGE_OF_MAJORITY - 1);
+        var alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY + 3);
+        var bob = new Person(2, "Bob", MethodReferences.AGE_OF_MAJORITY);
+        var jim = new Person(3, "Jim", MethodReferences.AGE_OF_MAJORITY - 1);
 
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        var persons = List.of(alice, bob, jim);
 
-        List<Person> filteredPersons = persons.stream()
+        var filteredPersons = persons.stream()
                 .filter(MethodReferences.buildIsAMinor())
-                .collect(toList());
+                .toList();
 
         assertThat(filteredPersons).containsExactly(jim);
     }
 
     @Test
     void testIsAMinorWithEmptyResult() {
-        Person alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY + 3);
+        var alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY + 3);
         Person bob = new Person(2, "Bob", MethodReferences.AGE_OF_MAJORITY + 20);
         Person jim = new Person(3, "Jim", MethodReferences.AGE_OF_MAJORITY);
 
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        List<Person> persons = List.of(alice, bob, jim);
 
         List<Person> filteredPersons = persons.stream()
                 .filter(MethodReferences.buildIsAMinor())
-                .collect(toList());
+                .toList();
 
         assertThat(filteredPersons).isEmpty();
     }
 
     @Test
     void testIsAMinorWithMultipleValues() {
-        Person alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY - 1);
-        Person bob = new Person(2, "Bob", MethodReferences.AGE_OF_MAJORITY - 10);
-        Person jim = new Person(3, "Jim", MethodReferences.AGE_OF_MAJORITY - 5);
+        var alice = new Person(1, "Alice", MethodReferences.AGE_OF_MAJORITY - 1);
+        var bob = new Person(2, "Bob", MethodReferences.AGE_OF_MAJORITY - 10);
+        var jim = new Person(3, "Jim", MethodReferences.AGE_OF_MAJORITY - 5);
 
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        var persons = List.of(alice, bob, jim);
 
-        List<Person> filteredPersons = persons.stream()
+        var filteredPersons = persons.stream()
                 .filter(MethodReferences.buildIsAMinor())
-                .collect(toList());
+                .toList();
 
         assertThat(filteredPersons).containsExactly(alice, bob, jim);
     }
