@@ -1,7 +1,6 @@
 package com.att.tlv.training.java.exercises.streams;
 
 import com.att.tlv.training.java.exercises.data.Person;
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -20,11 +19,11 @@ class BasicCollectorsTest {
         Person alice = new Person(1000, "Alice", 1);
         Person bob = new Person(2000, "Bob", 2);
         Person jim = new Person(3000, "Jim", 3);
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        List<Person> persons = List.of(alice, bob, jim);
 
         List<String> names = BasicCollectors.getNames(persons);
 
-        assertThat(names).containsExactly(alice.getName(), bob.getName(), jim.getName());
+        assertThat(names).containsExactly(alice.name(), bob.name(), jim.name());
     }
 
     @Test
@@ -39,7 +38,7 @@ class BasicCollectorsTest {
         Person alice = new Person(1000, "Alice", 18);
         Person bob = new Person(2000, "Bob", 11);
         Person jim = new Person(3000, "Jim", 10);
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        List<Person> persons = List.of(alice, bob, jim);
 
         LinkedList<Person> minors = BasicCollectors.getMinorsOnly(persons);
 
@@ -58,11 +57,11 @@ class BasicCollectorsTest {
         Person alice = new Person(1000, "Alice", 18);
         Person bob = new Person(2000, "Bob", 11);
         Person jim = new Person(3000, "Jim", 10);
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        List<Person> persons = List.of(alice, bob, jim);
 
         Map<Long, Person> idToPerson = BasicCollectors.mapIdToPerson(persons);
 
-        assertThat(idToPerson).containsOnly(entry(alice.getId(), alice), entry(bob.getId(), bob), entry(jim.getId(), jim));
+        assertThat(idToPerson).containsOnly(entry(alice.id(), alice), entry(bob.id(), bob), entry(jim.id(), jim));
     }
 
     @Test
@@ -76,7 +75,7 @@ class BasicCollectorsTest {
     void testMapIdToPersonWithDuplicate() {
         Person alice = new Person(1000, "Alice", 18);
         Person bob = new Person(1000, "Bob", 11);
-        List<Person> persons = ImmutableList.of(alice, bob);
+        List<Person> persons = List.of(alice, bob);
 
         // Boom
         assertThatIllegalStateException().isThrownBy(() -> BasicCollectors.mapIdToPerson(persons));
@@ -88,11 +87,11 @@ class BasicCollectorsTest {
         Person alice = new Person(1000, "Alice", duplicateAge);
         Person bob = new Person(2000, "Bob", 11);
         Person jim = new Person(3000, "Jim", duplicateAge);
-        List<Person> persons = ImmutableList.of(alice, bob, jim);
+        List<Person> persons = List.of(alice, bob, jim);
 
         Map<Integer, String> ageToNames = BasicCollectors.mapAgeToNames(persons);
 
-        assertThat(ageToNames).containsOnly(entry(duplicateAge, alice.getName() + jim.getName()), entry(bob.getAge(), bob.getName()));
+        assertThat(ageToNames).containsOnly(entry(duplicateAge, alice.name() + jim.name()), entry(bob.age(), bob.name()));
     }
 
     @Test
@@ -108,11 +107,11 @@ class BasicCollectorsTest {
         Person alice = new Person(1000, ALICE, 18);
         Person bob = new Person(2000, "Bob", 11);
         Person alice2 = new Person(3000, ALICE, 10);
-        List<Person> persons = ImmutableList.of(alice, bob, alice2);
+        List<Person> persons = List.of(alice, bob, alice2);
 
         Map<String, Long> nameToCount = BasicCollectors.mapNameToCount(persons);
 
-        assertThat(nameToCount).containsOnly(entry(ALICE, 2L), entry(bob.getName(), 1L));
+        assertThat(nameToCount).containsOnly(entry(ALICE, 2L), entry(bob.name(), 1L));
     }
 
     @Test
