@@ -1,8 +1,6 @@
 package com.att.tlv.training.java.exercises.streams;
 
 import com.att.tlv.training.java.exercises.data.Person;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -21,11 +19,11 @@ class GroupingCollectorsTest {
         Person bob = new Person(2000, "Bob", 11);
         Person jim = new Person(3000, "Jim", 10);
         Person carl = new Person(3000, "Carl", 11);
-        List<Person> persons = ImmutableList.of(alice, bob, jim, carl);
+        List<Person> persons = List.of(alice, bob, jim, carl);
 
         Map<Long, List<Person>> idToPersons = GroupingCollectors.groupById(persons);
 
-        assertThat(idToPersons).containsOnly(entry(alice.getId(), listOf(alice)), entry(bob.getId(), listOf(bob)), entry(jim.getId(), listOf(jim, carl)));
+        assertThat(idToPersons).containsOnly(entry(alice.id(), listOf(alice)), entry(bob.id(), listOf(bob)), entry(jim.id(), listOf(jim, carl)));
     }
 
     @Test
@@ -41,11 +39,11 @@ class GroupingCollectorsTest {
         Person bob = new Person(2000, "Bob", 11);
         Person jim = new Person(3000, "Jim", 10);
         Person carl = new Person(4000, "Jim", 11);
-        List<Person> persons = ImmutableList.of(alice, bob, jim, carl);
+        List<Person> persons = List.of(alice, bob, jim, carl);
 
         Map<String, List<Long>> nameToIds = GroupingCollectors.groupByNameToIds(persons);
 
-        assertThat(nameToIds).containsOnly(entry(alice.getName(), listOf(alice.getId())), entry(bob.getName(), listOf(bob.getId())), entry(jim.getName(), listOf(jim.getId(), carl.getId())));
+        assertThat(nameToIds).containsOnly(entry(alice.name(), listOf(alice.id())), entry(bob.name(), listOf(bob.id())), entry(jim.name(), listOf(jim.id(), carl.id())));
     }
 
     @Test
@@ -62,11 +60,11 @@ class GroupingCollectorsTest {
         Person alice2 = new Person(3000, "Alice", 10);
         Person bob2 = new Person(4000, "Bob", 11);
         Person jim = new Person(5000, "Jim", 10);
-        List<Person> persons = ImmutableList.of(alice, bob, alice2, bob2, jim);
+        List<Person> persons = List.of(alice, bob, alice2, bob2, jim);
 
         Map<String, Set<Integer>> nameToAges = GroupingCollectors.groupByNameToDistinctAges(persons);
 
-        assertThat(nameToAges).containsOnly(entry(alice.getName(), setOf(alice.getAge(), alice2.getAge())), entry(bob.getName(), setOf(bob.getAge())), entry(jim.getName(), setOf(jim.getAge())));
+        assertThat(nameToAges).containsOnly(entry(alice.name(), setOf(alice.age(), alice2.age())), entry(bob.name(), setOf(bob.age())), entry(jim.name(), setOf(jim.age())));
     }
 
     @Test
@@ -81,11 +79,11 @@ class GroupingCollectorsTest {
         Person alice = new Person(1000, "Alice", 18);
         Person bob = new Person(2000, "Bob", 11);
         Person alice2 = new Person(3000, "Alice", 10);
-        List<Person> persons = ImmutableList.of(alice, bob, alice2);
+        List<Person> persons = List.of(alice, bob, alice2);
 
         Map<String, Integer> nameToSum = GroupingCollectors.groupByNameToSumOfAges(persons);
 
-        assertThat(nameToSum).containsOnly(entry(alice.getName(), alice.getAge() + alice2.getAge()), entry(bob.getName(), bob.getAge()));
+        assertThat(nameToSum).containsOnly(entry(alice.name(), alice.age() + alice2.age()), entry(bob.name(), bob.age()));
     }
 
     @Test
@@ -101,13 +99,13 @@ class GroupingCollectorsTest {
         Person bob = new Person(2000, "Bob", 11);
         Person carl = new Person(3000, "Carl", 11);
         Person bob2 = new Person(4000, "Bob", 11);
-        List<Person> persons = ImmutableList.of(alice, bob, carl, bob2);
+        List<Person> persons = List.of(alice, bob, carl, bob2);
 
         Map<Integer, Map<String, Long>> ageToNameToTotal = GroupingCollectors.groupByAgeToNameToCount(persons);
 
-        assertThat(ageToNameToTotal).containsOnlyKeys(alice.getAge(), bob.getAge());
-        assertThat(ageToNameToTotal.get(alice.getAge())).containsOnly(entry(alice.getName(), 1L));
-        assertThat(ageToNameToTotal.get(bob.getAge())).containsOnly(entry(bob.getName(), 2L), entry(carl.getName(), 1L));
+        assertThat(ageToNameToTotal).containsOnlyKeys(alice.age(), bob.age());
+        assertThat(ageToNameToTotal.get(alice.age())).containsOnly(entry(alice.name(), 1L));
+        assertThat(ageToNameToTotal.get(bob.age())).containsOnly(entry(bob.name(), 2L), entry(carl.name(), 1L));
     }
 
     @Test
@@ -123,7 +121,7 @@ class GroupingCollectorsTest {
         Person bob = new Person(2000, "Bob", 21);
         Person jim = new Person(3000, "Jim", 10);
         Person carl = new Person(4000, "Carl", 11);
-        List<Person> persons = ImmutableList.of(alice, bob, jim, carl);
+        List<Person> persons = List.of(alice, bob, jim, carl);
 
         Map<Boolean, List<Person>> voters = GroupingCollectors.partitionByIsAllowedToVote(persons);
 
@@ -139,11 +137,11 @@ class GroupingCollectorsTest {
 
     @SafeVarargs
     private static <T> List<T> listOf(T... items) {
-        return ImmutableList.copyOf(items);
+        return List.of(items);
     }
     
     @SafeVarargs
     private static <T> Set<T> setOf(T... items) {
-        return ImmutableSet.copyOf(items);
+        return Set.of(items);
     }
 }
